2018-03-15  Andrew Burgess  <andrew.burgess@embecosm.com>

	* targets/gdbsim/GdbSimImpl.cpp (GdbSimImpl::GdbSimImpl):
	Initialise new member variables.  Call reset to do work.
	(GdbSimImpl::reset): Close previous simulator, and open a new
	simulator.
	(GdbSimImpl::readRegister): Update error message to put register
	number in hex.
	(GdbSimImpl::doOneStep): Better support for different reasons the
	simulator might stop.
	* targets/gdbsim/GdbSimImpl.h (GdbSimImpl::mHaveReset): Declare
	new member variable.

2017-12-21  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/SyscallReplyPacket.h: New file.
	* server/GdbServerImpl.cpp: Add cassert, and SyscallReplyPacket.h
	include.
	(GdbServerImpl::rspSyscallReply): Rewrite using
	SyscallReplyPacket.
	(GdbServerImpl::rspClientRequest): Use return value from
	rspSyscallReply.
	* server/GdbServerImpl.h (GdbServerImpl::rspSyscallReply): Change
	return type.
	* server/Makefile.am (ALL_SOURCES): Add SyscallReplyPacket.h.
	* server/Makefile.in: Regenerated.

2017-12-05  Andrew Burgess  <andrew.burgess@embecosm.com>

	* server/StreamConnection.cpp
	(StreamConnection::StreamConnection): Initialise mIsConnected.
	(StreamConnection::rspClose): Update header comment, set
	mIsConnected.
	(StreamConnection::isConnected): Return mIsConnected.
	(StreamConnection::getRspCharRaw): Return -1 when zero bytes are
	read, this should only happen when stdin is closed.
	* server/StreamConnection.h (StreamConnection::mIsConnected):
	Declare new member variable.

2017-11-20  Andrew Burgess  <andrew.burgess@embecosm.com>

	* configure.ac: Add check for -faligned-new, and add to CXXFLAGS.
	* m4/cxx_flags_check.m4: New file.
	* Makefile.in: Regenerate.
	* aclocal.m4: Regenerate.
	* configure: Regenerate.
	* server/Makefile.in: Regenerate.
	* targets/Makefile.in: Regenerate.
	* targets/common/Makefile.in: Regenerate.
	* targets/gdbsim/Makefile.in: Regenerate.
	* targets/pegasus/Makefile.in: Regenerate.
	* targets/ri5cy/Makefile.in: Regenerate.