@@ -1,3 +1,8 @@
+2018-03-22  Andrew Burgess  <andrew.burgess@embecosm.com>
+
+	* targets/gdbsim/GdbSimImpl.cpp (GdbSimImpl::doOneStep): Detect
+	compressed break instructions as well as uncompressed.
+
 2018-03-15  Andrew Burgess  <andrew.burgess@embecosm.com>
 
 	* targets/gdbsim/GdbSimImpl.cpp (GdbSimImpl::GdbSimImpl):
